alteração dentro da tag h1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Projeto Git</title>
 </head>
 <body>
-    <h1>Titulo</h1>
+    <h1>HTML É MUITO BOM
+        
+    </h1>
 </body>
 </html>
